--- a/WEB/Web Company Profile/index.html
+++ b/WEB/Web Company Profile/index.html
@@ -11,7 +11,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cantika</title>
+  <title>Company Profile</title>
 </head>
 
 <body id="home" class="scrollspy">
@@ -20,7 +20,7 @@
     <nav class="pink lighten-1">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#home" class="brand-logo">Syantika</a>
+          <a href="#home" class="brand-logo">Mela Santika</a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#about">About Us</a></li>
@@ -37,11 +37,11 @@
 
   <!-- sidenav -->
   <ul class="sidenav" id="mobile-nav">
-    <li><a href="">About Us</a></li>
-    <li><a href="">Clients</a></li>
-    <li><a href="">Services</a></li>
-    <li><a href="">Portfolio</a></li>
-    <li><a href="">Contact Us</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="#clients">Clients</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#contact">Contact Us</a></li>
   </ul>
   <!-- akhir sidenav -->
 
@@ -49,14 +49,6 @@
   <!-- slider -->
   <div class="slider">
     <ul class="slides">
-      <li>
-        <img src="img/slider/1.jpg">
-        <div class="caption left-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-
       <li>
         <img src="img/slider/2.jpg">
         <div class="caption right-align">
@@ -98,7 +90,7 @@
             <div class="determinate pink" style="width: 97%"></div>
           </div>
 
-          <p>GAME DEVELOPMENT</p>
+          <p>WORDPRESS DEVELOPER</p>
           <div class="progress">
             <div class="determinate pink" style="width: 90%"></div>
           </div>
@@ -120,11 +112,11 @@
         </div>
 
         <div class="col m4 s12 center">
-          <img src="img/clients/2.png">
+          <img src="img/clients/1.png">
         </div>
 
         <div class="col m4 s12 center">
-          <img src="img/clients/3.png">
+          <img src="img/clients/1.png">
         </div>
       </div>
     </div>
@@ -156,7 +148,7 @@
         <div class="col m4 s12">
           <div class="card-panel center">
             <i class="material-icons medium">games</i>
-            <h5>Game Development</h5>
+            <h5>Wordpress Developer</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, doloremque.</p>
           </div>
         </div>
@@ -228,8 +220,8 @@
             <li class="collection-header">
               <h4>Our Office</h4>
             </li>
-            <li class="collection-item">Syantika</li>
-            <li class="collection-item">Gang rante, Bogor</li>
+            <li class="collection-item">Mela Santika</li>
+            <li class="collection-item">Bogor</li>
             <li class="collection-item">West Java, Indonesia</li>
           </ul>
         </div>
@@ -268,7 +260,8 @@
 
   <!-- footer -->
   <footer class="pink lighten-1 white-text center scrollspy">
-    <p class="flow-text"></p>Syantika. Copyright 2019.</p>
+    <p class="flow-text"></p>&copy; Copyright 2020 Mela Santika
+    </p>
   </footer>
   <!-- akhir-footer -->
 
