--- a/WEB/Web Portofolio 2/index.html
+++ b/WEB/Web Portofolio 2/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <!--my css -->
   <style>
@@ -25,7 +24,7 @@
   <!-- navbar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Mela Cantika</a>
+      <a class="navbar-brand" href="#">Mela Santika</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,8 +45,8 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container text-center">
       <img src="img/profile2.png" width="25%" class="rounded-circle img-thumbnail">
-      <h1 class="display-4">Mela Cantika</h1>
-      <p class="lead">Selamat datang di Syantika.com</p>
+      <h1 class="display-4">Mela Santika</h1>
+      <p class="lead">Selamat datang di melasantika.com</p>
     </div>
   </div>
   <!-- akhir jumbotron -->
@@ -94,7 +93,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md">
           <div class="card">
             <img src="img/thumbs/2.png" class="card-img-top" alt="...">
@@ -104,7 +102,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md">
           <div class="card">
             <img src="img/thumbs/3.png" class="card-img-top" alt="...">
@@ -115,7 +112,6 @@
           </div>
         </div>
       </div>
-
       <div class="row mb-4">
         <div class="col-md">
           <div class="card">
@@ -126,7 +122,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md">
           <div class="card">
             <img src="img/thumbs/2.png" class="card-img-top" alt="...">
@@ -136,7 +131,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-md">
           <div class="card">
             <img src="img/thumbs/3.png" class="card-img-top" alt="...">
@@ -151,7 +145,6 @@
   </section>
   <!-- akhir portfolio -->
 
-
   <!-- contact -->
   <section id="contact" class="contact mb-5">
     <div class="container">
@@ -160,7 +153,6 @@
           <h2>Contact Us</h2>
         </div>
       </div>
-
       <div class="row justify-content-center">
         <div class="col-lg-4">
           <div class="card text-white bg-primary mb-3 text-center">
@@ -169,7 +161,6 @@
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, omnis.</p>
             </div>
           </div>
-
           <ul class="list-group">
             <li class="list-group-item">
               <h1>Location</h1>
@@ -179,24 +170,20 @@
             <li class="list-group-item">West Java, Indonesia</li>
           </ul>
         </div>
-
         <div class="col-lg-6">
           <form>
             <div class="form-group">
               <label for="nama">Nama</label>
               <input type="text" class="form-control" id="nama">
             </div>
-
             <div class="form-group">
               <label for="email">Email</label>
               <input type="text" class="form-control" id="email">
             </div>
-
             <div class="form-group">
               <label for="telp">Telp</label>
               <input type="text" class="form-control" id="telp">
             </div>
-
             <div class="form-group">
               <label for="pesan">Pesan</label>
               <textarea name="pesan" id="pesan" class="form-control"></textarea>
@@ -216,24 +203,20 @@
     <div class="container">
       <div class="row pt-3">
         <div class="col text-center">
-          <p>Copyright 2018.</p>
+          <p>&copy; Copyright 2020</p>
         </div>
       </div>
     </div>
   </footer>
   <!-- akhir footer -->
 
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  <script src="js/jquery-3.3.1.slim.min.js">
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+  <script src="js/popper.min.js">
   </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+  <script src="js/bootstrap.min.js">
   </script>
 </body>
 
